...
        <Input
          {...autocomplete.inputProps}
          placeholder="Search Countries"
          clearButtonMode="never"
          style={style.input}
          autoFocus
          testID="countriesAutocompleteInput"
        />
      </View>
      {autocomplete.focus && autocomplete.data ? (
        <FlatList
          testID="countriesAutocompleteList"
          style={style.listContainer}
...
