...
          <Text style={styles.footer}>Engine: Hermes</Text>
        </View>
      )}
      <View style={styles.body}>
        <View style={styles.buttonContainer}>
          <Button
            testID="searchButton"
            label={'Search Countries'}
            type="accent"
            flex
            large
            onPress={() => {
              props.navigation.navigate(SEARCH, {});
...
